fixed white space on bottom of blue svg

--- a/BooKtebi/src/app/login/login.component.css
+++ b/BooKtebi/src/app/login/login.component.css
@@ -1,6 +1,7 @@
 .sky_bg{
 	position: absolute;
 	right: 0px;
+	height:100%;
 
 }
 
@@ -9,7 +10,7 @@
 	position: absolute;
 	width: 864px;
 	height: 916px;
-	left: 60%;
+	left: 59%;
 	top: 56px;
 
 }
